--- a/css/styles.css
+++ b/css/styles.css
@@ -577,6 +577,8 @@ footer {
 /* ---------- SECCION BOTONES PORTFOLIO ----------- */
 
 .buttons-list {
+  display: flex;
+  justify-content: center;
   margin-bottom: 34px;
 }
 
@@ -604,11 +606,6 @@ footer {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.buttons-list {
-  display: flex;
-  justify-content: center;
-}
-
 button {
   border: none;
 }
@@ -617,12 +614,14 @@ button {
 .boxes-list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  gap: 30px;
+  /* justify-content: space-between; */
 }
 .box-item {
+  flex-basis: calc((100% - 60px) / 3);
   width: 370px;
-  /* max-height: 404px; */
-  margin-bottom: 30px;
+
+  /* margin-bottom: 30px; */
 }
 
 .box-item > img {
